# ChangeLog for app-text/ghostscript-gpl
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/ghostscript-gpl/ChangeLog,v 1.146 2012/05/23 13:22:42 ranger Exp $

  23 May 2012; Brent Baude <ranger@gentoo.org> ghostscript-gpl-9.05-r1.ebuild:
  Marking ghostscript-gpl-9.05-r1 ppc64 for bug 414463

  18 May 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -ghostscript-gpl-9.04-r6.ebuild:
  Remove old

  18 May 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  ghostscript-gpl-9.05-r2.ebuild:
  Remove german manpages if not needed by user, bug 407197

  26 May 2012; Fabian Groffen <grobian@gentoo.org>
  files/ghostscript-gpl-9.05-darwin.patch:
  Fix Darwin patch to perform proper linking

  16 May 2012; Jeroen Roovers <jer@gentoo.org> ghostscript-gpl-9.05-r1.ebuild:
  Stable for HPPA (bug #414463).

  13 May 2012; Markus Meier <maekke@gentoo.org> ghostscript-gpl-9.05-r1.ebuild:
  arm stable, bug #414463

*ghostscript-gpl-9.05-r2 (09 May 2012)

  09 May 2012; Timo Gurr <tgurr@gentoo.org> -ghostscript-gpl-9.04-r5.ebuild,
  -ghostscript-gpl-9.05.ebuild, +ghostscript-gpl-9.05-r2.ebuild:
  Fix segfaults, bug #410575 thanks to Marcus Spading. Add Fedora icc patch.
  Remove old.

  06 May 2012; Agostino Sarubbo <ago@gentoo.org>
  ghostscript-gpl-9.05-r1.ebuild:
  Stable for amd64, wrt bug #414463

  04 May 2012; Jeff Horelick <jdhore@gentoo.org>
  ghostscript-gpl-9.04-r4.ebuild, ghostscript-gpl-9.04-r5.ebuild,
  ghostscript-gpl-9.04-r6.ebuild, ghostscript-gpl-9.05.ebuild,
  ghostscript-gpl-9.05-r1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*ghostscript-gpl-9.05-r1 (01 May 2012)

  01 May 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +ghostscript-gpl-9.05-r1.ebuild:
  Add symlink for poppler-data integration, bug 409361

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org>
  ghostscript-gpl-9.05.ebuild:
  keyword ~amd64-fbsd

  05 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org>