@@ -14,14 +14,14 @@ DIST ghostscript-9.05.tar.bz2 28279634 RMD160 27935f60083b788b2793b19ee42f366308
 DIST ghostscript-gpl-9.04-patchset-3.tar.bz2 7760 RMD160 43a38afd1e8de506db70a58d0fa3168dba3c3a6e SHA1 03b27dad2e4cbec045f2264885bf366526e2db00 SHA256 b3c20adc111b8ddf3bc7d60a01fa1b31eadb9d6d9eb8ac474d9aa1604bd51b6f
 DIST ghostscript-gpl-9.05-patchset-2.tar.bz2 5525 RMD160 4d0f5acb013a2acdb7bef1a67bc206a9cb2bf011 SHA1 0136b6025e26fe0a3a3d6b00cfe2887625c43b97 SHA256 1deadf8ed034353ffc14230b66cd438774bd6def03e6f93943f5200bbd01695b
 DIST gsdjvu-1.5.tar.gz 207583 RMD160 010be2cd791d5e2814c1f6554150bfd7c34222c0 SHA1 c7d0677dae5fe644cf3d714c04b3c2c343906342 SHA256 d4f01d605ff086835005e79d5fcead2def8aafafc106e170dc5f2dc618593ab4
-EBUILD ghostscript-gpl-9.04-r4.ebuild 7055 RMD160 eb4a6f1910c2da702221e7f1d3678550b20acb47 SHA1 54f27d90e507541a72851bc803f481d97e784a46 SHA256 a00f86d3837454f11e8ee62921c533b8370a7295a8ff3e859f5bcd3a16c3044c
-EBUILD ghostscript-gpl-9.05-r2.ebuild 7501 RMD160 286481f570d36b77490ae388cab80e42e79cd67a SHA1 e5501b9d6434cad851b5eec630ab939486eff8ed SHA256 76018a2b08d2f5d8d00009d0d4f995cb2c81b827bcd1b500b052c3540153adac
-MISC ChangeLog 26902 RMD160 2dfd310acb9d712820624ae0f2e3b4ae23887eeb SHA1 3e92c9e7ed299f4784b772cdb403893cf0a7bd2c SHA256 f57a877065a75cfed30811c7025b8c4622989b0a5db544fdbc39a8461bd495ac
+EBUILD ghostscript-gpl-9.04-r4.ebuild 7065 RMD160 47eaa8a50dfcf9361f89d5401b48f0c79f012fe2 SHA1 24d0f709f425b7cf5a2f86101119a9a9c55b24a3 SHA256 271984a8682b6c5edbeda1d2097a0327928a0a1fdeb745678f531317850662ce
+EBUILD ghostscript-gpl-9.05-r2.ebuild 7508 RMD160 c55f47800e1d7891478aa5bf7e6c16ae0dc6efb8 SHA1 38bee0ce9f4b0e92b0d5d18306a5ec04ae528043 SHA256 f3d179799e71977919aaf059eb750fc1c676d2583d12ce9fef29599bd07b2df6
+MISC ChangeLog 27216 RMD160 8202fce030b6238f5596bc3ce96cc31b5c36533c SHA1 a070974d613310e8dd9230fec3853e965a1421e2 SHA256 981b209f19066cab64c392bd11f21a3f7ce2b4bef9ea3d967230bfa1e6c2cfac
 MISC metadata.xml 281 RMD160 021f72140851af4f6b5fd892d1c5ab485ebce970 SHA1 4b5de22d7f9078ea8935cb5616c73540f8ef4aab SHA256 8f54c529127270fee6cdc9e4db328d9403ff2183d2ce21317932c17fd58ad0d0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/CBmkACgkQX3X2B8XHTokw/wCbBj6tZbyHvNgrXznTw+I8Zi/u
-uO4An1dDTjERwK9M4U1ueiR6hlWD15MJ
-=Kxyd
+iEYEARECAAYFAk/LMqsACgkQX3X2B8XHTonQ4QCeKcSDzqDFzZ86h9JLQ33ej6xr
+k2IAnROHapnVU+oho4Lql2FOE9YK/nJu
+=j0II
 -----END PGP SIGNATURE-----
